--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Jesper Vallett</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="vallett-se.css">
 </head>
-<body>
-
+<body class="centered">
+    <div class="top-margin">
+        <h1>Jesper Vallett</h1>
+    </div>
+    <div class="links top-margin">
+        <a href="https://github.com/jesperva" target="_blank"><button>Github</button></a>
+        <a href="https://www.linkedin.com/in/jesper-vallett/" target="_blank"><button>Linkedin</button></a>
+        <a href="/files/cv.html" target="_blank"><button>CV - HTML</button></a>
+        <a href="/files/Jesper_Vallett_CV.pdf" target="_blank"><button>CV - PDF</button></a>
+    </div>
+    <div class="contact-info top-margin">
+        <b>Mail:</b> jesper@vallett.se
+    </div>
 </body>
 </html>
