--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body class="centered">
     <div class="top-margin">
+        <img class="rounded_image" src="img/profile.png" alt="Avatar">
+    </div>
+    <div class="top-margin">
         <h1>Jesper Vallett</h1>
     </div>
     <div class="links top-margin">
